syntax = "proto3";

package aspb;

import "aspb/anime_serie.proto";
import "shpb/anime_resource.proto";

option go_package = "github.com/dj-yacine-flutter/gojo/pb/aspb";

message CreateAnimeSerieRequest { 
    AnimeSerieRequest animeSerie = 1;
    shpb.AnimeResourceRequest resources = 2;
}

message CreateAnimeSerieResponse { 
    AnimeSerieResponse animeSerie = 1;
    shpb.AnimeResourceResponse resources = 2;
}